# instruction-decoding-8086

./: .gitignore  Cargo.toml  build.rs  testcase.asm
src/: cycle.rs  flag_register.rs  helpers.rs  lib.rs  main.rs  memory.rs  mode.rs  prelude.rs  register.rs  segment_register.rs  store.rs
src/instructions/: add.rs  arithmetic.rs  compare.rs  decode.rs  instruction.rs  jump.rs  mod.rs  mov.rs  operands.rs  subtract.rs
tests/: decode_test.rs  draw_test.rs  mod.rs  simulation_test.rs
tests/simulation_test/: listing_43_test.rs  listing_44_test.rs  listing_45_test.rs  mod.rs
tests/snapshots/: r#mod__simulation_test__listing_0043_immediate_movs-2.snap  r#mod__simulation_test__listing_0043_immediate_movs-3.snap  r#mod__simulation_test__listing_0043_immediate_movs.snap  r#mod__simulation_test__listing_0044_register_movs-2.snap  r#mod__simulation_test__listing_0044_register_movs.snap  r#mod__simulation_test__listing_0045_challenge_register_movs-2.snap  r#mod__simulation_test__listing_0045_challenge_register_movs.snap  r#mod__simulation_test__listing_0046_add_sub_cmp-3.snap  r#mod__simulation_test__listing_0046_add_sub_cmp.snap  r#mod__simulation_test__listing_0047_challenge_flags-2.snap  r#mod__simulation_test__listing_0047_challenge_flags-3.snap  r#mod__simulation_test__listing_0047_challenge_flags.snap  r#mod__simulation_test__listing_0048_ip_register-2.snap  r#mod__simulation_test__listing_0048_ip_register-3.snap  r#mod__simulation_test__listing_0048_ip_register-4.snap  r#mod__simulation_test__listing_0049_conditional_jumps-2.snap  (+24 more)
tests/test_listings/: listing_43.asm  (+2 more)
(+2 files in other folders)
