[package]
name = "instruction_decoding_8086"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[lib]
name = "instruction_decoding_8086"
path = "src/lib.rs"

[[bin]]
name = "instruction_decoding_8086"
path = "src/main.rs"

[dev-dependencies]
insta = "1.31"